tests/NormalTests/paczka1/small_fuzzy/17319065.err
Error in line 2: 3oHr71oRqve A47 90,5
Error in line 13: 4KmXqswQC S688 342รถ3
Error in line 14: YMAAAgxsVWZ S903 51,6
